# sonolus.py-demo-engine

./: LICENSE  README.md  build.py  pyproject.toml
demo/: level.py  project.py
demo/common/: buckets.py  effect.py  options.py  particle.py  skin.py
demo/play/: config.py  init.py  input_manager.py  mode.py  note.py  stage.py
demo/preview/: bar_line.py  chart.py  init.py  mode.py  note.py  stage.py
demo/tutorial/: init.py  instructions.py  mode.py  navigate.py  note.py  stage.py  update.py
demo/watch/: init.py  mode.py  note.py  stage.py
