[project]
name = "sonolus-demo-engine"
version = "0.1.0"
description = "Demo engine for Sonolus.py"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sonolus-py>=0.1.5",
]

[tool.ruff.lint]
preview = true
select = ["F", "E", "W", "I", "N", "D", "UP", "YTT", "B", "A", "COM", "C4", "DTZ", "PIE", "PT", "Q", "SLOT", "SIM", "PTH", "PL", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E402", "D1", "COM812", "PLW2901", "PLW3201", "PLR6301", "PLC0415", "PLR2004", "PLR09", "SIM108", "FURB113", "A005"]

[tool.ruff.lint.pydocstyle]
convention = "google"
